--- a/1. Basic web/style.css
+++ b/1. Basic web/style.css
@@ -41,10 +41,11 @@ img {
     background-color: white;
     border-style: dotted;
     border-color: rgb(178, 178, 178);
+    width: 200px;
 }
 
 #myTable {
-    background-color:  rgb(178, 178, 178);
+    background-color:  rgb(207, 207, 207);
     border-width: 2px;
 }
 
@@ -64,4 +65,9 @@ td {
 
 #gender{
     padding: 5px;
+}
+
+
+input[type="radio"]:focus {
+    outline: 2px solid rgb(0, 0, 0);
 }
