--- a/5. Quantum/style.css
+++ b/5. Quantum/style.css
@@ -1,272 +1,28 @@
 @font-face {
-    font-family: 'Quicksand';
-    src: url('/assets/Quicksand font 1/Quicksand-VariableFont_wght.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
+  font-family: 'Quicksand';
+  src: url('/assets/Quicksand font 1/Quicksand-VariableFont_wght.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
 }
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Quicksand', sans-serif;
-}
-
-html,
-body {
-    height: 100%;
-    background-color: #EEEEEE;
-    overflow-y: hidden;
-}
-
-#main {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-}
-
-
-input[type="radio"],
-input[type="checkbox"] {
-    position: absolute;
-    opacity: 0;
-    width: 0;
-    height: 0;
-}
-
-.radio-group label {
-    position: relative;
-    padding-left: 30px;
-    cursor: pointer;
-    user-select: none;
-    display: inline-flex;
-    align-items: center;
-    gap: 0.5rem;
-}
-
-.radio-group label::before {
-    content: "";
-    position: absolute;
-    left: 0;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 20px;
-    height: 20px;
-    background-image: url('/assets/icons/radio-button-off.svg');
-    background-size: contain;
-    background-repeat: no-repeat;
-}
-
-input[type="radio"]:checked+label::before {
-    background-image: url('/assets/icons/radio-button-on.svg');
-}
-
-.remember-label input[type="checkbox"] {
-    position: absolute;
-    opacity: 0;
-    width: 0;
-    height: 0;
-    margin: 0;
-    padding: 0;
-}
-
-.checkbox-custom {
-    cursor: pointer;
-    width: 20px;
-    height: 20px;
-    background-image: url('/assets/icons/checkbox-unchecked.svg');
-    background-size: contain;
-    background-repeat: no-repeat;
-    display: inline-block;
-    flex-shrink: 0;
-    user-select: none;
-}
-
-.remember-label input[type="checkbox"]:checked+.checkbox-custom {
-    background-image: url('/assets/icons/checkbox-checked.svg');
-}
-
-
-
-
-
-.nav-bg {
-    background-image: url('/assets/header_pattern_svg.svg');
-    position: absolute;
-    z-index: -1;
-    width: 100%;
-    height: 7vh;
-    background-size: cover;
-}
-
-.nav {
-    height: 7vh;
-    background-color: rgba(0, 0, 0, 0.7);
-    box-shadow: 0 2px 4px #3AC7EC;
-    display: flex;
-    align-items: center;
-}
-
-.logo-container {
-    padding-left: 24px;
-    height: 4.4vh;
-    display: flex;
-    align-items: center;
-}
-
-.container {
-    flex: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.form-container {
-    background-color: #FFFFFF;
-    border-top: #3AC7EC solid 3px;
-    width: 100%;
-    max-width: 500px;
-    padding: 2rem;
-    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
-}
-
-.top-bar {
-  position: relative;
-  height: 1rem;
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  margin-bottom: 2rem;
-}
-
-.top-bar .back-arrow {
-  width: 24px;
-  height: 24px;
-  margin-left: 0rem;
-  z-index: 1;
-}
-
-.top-bar h3 {
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
   margin: 0;
-  font-size: 1.25rem;
-  font-weight: bold;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Quicksand', sans-serif;
 }
 
-
-.form {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-}
-
-.radio-group {
-    display: flex;
-    gap: 1.5rem;
-    margin-bottom: 1rem;
-}
-
-.label-a {
-    padding-left: 0.6rem;
-    font-size: 1rem;
-    color: #232f3d;
-}
-
-.dropdown,
-.text-field {
-    width: 100%;
-    height: 2.5rem;
-    border-radius: 4px;
-    border: none;
-    border-bottom: grey 1px solid;
-    background-color: #FFFFFF;
-    padding: 0 0.5rem;
-    font-size: 1rem;
-
-}
-
-.forgot {
-    color: #1F7A54;
-    font-size: 0.875rem;
-    text-decoration: none;
-    align-self: flex-end;
-}
-
-.password-container {
-    position: relative;
-}
-
-.eye-icon {
-    position: absolute;
-    right: 10px;
-    top: 50%;
-    transform: translateY(-50%);
-    cursor: pointer;
-}
-
-.button {
-    width: 100%;
-    height: 2.75rem;
-    background-color: #3FD28B;
-    border: none;
-    border-radius: 4px;
-    font-size: 1rem;
-    cursor: pointer;
-}
-
-.remember-label {
-    font-size: 0.9rem;
-    display: flex;
-    align-items: center;
-    gap: 0.5rem;
-}
-
-
-footer {
-    background-color: #EEEEEE;
-    font-size: 0.875rem;
-}
-
-#foot1 {
-    text-align: center;
-    font-weight: bold;
-    margin-bottom: 1rem;
-}
-
-#foot2 {
-    text-align: center;
-    background-color: #E0E1E1;
-    padding: 0.5rem 0;
-}
-
-.foot2 img {
-    width: 100px;
-    height: auto;
-}
-
-.logo-foot {
-    margin-top: 20px;
-}
-
-.hyperlink {
-    color: #1F7A54;
-    text-decoration: none;
-    margin: 0 0.5rem;
-}
-
-@media (max-width: 600px) {
-    .form-container {
-        padding: 1.5rem 1rem;
-        margin-top: 0;
-    }
-
-    .radio-group {
-        flex-direction: column;
-    }
-
-    .top-bar h3 {
-        font-size: 1rem;
-    }
+select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  background: transparent;
+  background-image: url("../assets/icons/arrow-down.svg");
+  background-repeat: no-repeat;
+  background-position-x: 100%;
+  background-position-y: 50%;
+  border: 1px solid #dfdfdf;
+  border-radius: 2px;
+  margin-right: 2rem;
+  padding: 1rem;
+  padding-right: 2rem;
 }
