--- a/5. Quantum/style.css
+++ b/5. Quantum/style.css
@@ -26,3 +26,34 @@ select {
   padding: 1rem;
   padding-right: 2rem;
 }
+
+.nav-tab {
+  position: relative;
+
+}
+
+.badge {
+  position: absolute;
+  top: -5px;
+  right: -5px;
+  background-color: #0066cc;
+  color: white;
+  border-radius: 50%;
+  width: 15px;
+  height: 18px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 12px;
+  font-weight: bold;
+  z-index: 10;
+}
+
+.nav-tab img {
+  width: 24px;
+  height: 24px;
+}
+
+.nav-tab:hover .badge {
+  display: none;
+}
